Correction des erreurs signalés sur sonarqube (POD)